# aoc-2022

./: aoc2022.cabal  flake.nix
solutions/day1/: hello.hs
src/day1/: Main.hs
src/day2/: Main.hs
src/day3/: Main.hs
src/lib/Aoc/: Utils.hs
