name: aoc2022
version: 0.1.0
license: Apache-2.0
license-file: LICENSE
author: Maxim Schuwalow
maintainer: Maxim Schuwalow <maxim.schuwalow@gmail.com>
bug-reports: mailto:maxim.schuwalow@gmail.com
stability: stable
homepage: http://github.com/mschuwalow/aoc-2022/
synopsis: Advent of Code 2022
cabal-version: >= 1.8
build-type: Simple

library aoc-lib
  hs-source-dirs: src/lib
  exposed-modules: Aoc.Utils
  build-depends:
    base >= 4.2 && < 5

executable day1
  hs-source-dirs: src/day1
  main-is: Main.hs
  build-depends:
    base >= 4.2 && < 5,
    aoc-lib

executable day2
  hs-source-dirs: src/day2
  main-is: Main.hs
  build-depends:
    base >= 4.2 && < 5,
    aoc-lib

